Extra cleanup - Removing unused variables and unnecessary default strings

--- a/.github/workflows/addComments.yml
+++ b/.github/workflows/addComments.yml
@@ -18,6 +18,6 @@ jobs:
           issue-number: ${{ github.event.number }}
           body: |
             Openshift URLs for the PR Deployment:
-            - App Route: https://biohubbc-app-${{ github.event.number }}-a0ec71-dev.apps.silver.devops.gov.bc.ca/
-            - Api Route: https://biohubbc-api-${{ github.event.number }}-a0ec71-dev.apps.silver.devops.gov.bc.ca/
+            - App Route: https://biohub-platform-app-${{ github.event.number }}-a0ec71-dev.apps.silver.devops.gov.bc.ca/
+            - Api Route: https://biohub-platform-api-${{ github.event.number }}-a0ec71-dev.apps.silver.devops.gov.bc.ca/
             - Pods: https://console.apps.silver.devops.gov.bc.ca/k8s/ns/a0ec71-dev/pods?name=${{ github.event.number }}
