--- a/api/openshift/api.is.yaml
+++ b/api/openshift/api.is.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 parameters:
   - name: NAME
-    value: biohubbc-api-setup
+    value: biohub-platform-api-setup
 objects:
   - apiVersion: image.openshift.io/v1
     kind: ImageStream
