--- a/app/openshift/app.bc.yaml
+++ b/app/openshift/app.bc.yaml
@@ -3,14 +3,14 @@ kind: Template
 metadata:
   creationTimestamp: null
   labels:
-    build: biohubbc-app
-  name: biohubbc-app
+    build: biohub-platform-app
+  name: biohub-platform-app
 parameters:
   - name: NAME
     displayName: Name
     description: Image name
     required: true
-    value: biohubbc-app
+    value: biohub-platform-app
   - name: SUFFIX
     displayName: Name Suffix
     description: A suffix appended to all objects
