--- a/api/openshift/api.dc.yaml
+++ b/api/openshift/api.dc.yaml
@@ -3,12 +3,16 @@ kind: Template
 metadata:
   resourceVersion: ''
   selfLink: ''
-  name: biohubbc-api-dc
+  name: biohub-platform-api-dc
 parameters:
   - name: ENABLE_FILE_VIRUS_SCAN
     value: 'true'
+  - name: CLAMAV_HOST
+    value: 'clamav'
+  - name: CLAMAV_PORT
+    value: '3310'
   - name: NAME
-    value: biohubbc-api
+    value: biohub-platform-api
   - name: SUFFIX
     value: '-dev'
   - name: VERSION
@@ -153,6 +157,10 @@ objects:
                   value: ${APP_HOST}
                 - name: ENABLE_FILE_VIRUS_SCAN
                   value: ${ENABLE_FILE_VIRUS_SCAN}
+                - name: CLAMAV_HOST
+                  value: ${CLAMAV_HOST}
+                - name: CLAMAV_PORT
+                  value: ${CLAMAV_PORT}
                 - name: DB_HOST
                   value: ${DB_SERVICE_NAME}
                 - name: DB_USER_API
