fix docker-compose internal db port

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - POSTGRES_USER=${DB_ADMIN}
       - POSTGRES_PASSWORD=${DB_ADMIN_PASS}
       - POSTGRES_DB=${DB_DATABASE}
-      - PORT=${DB_PORT}
+      - PORT=5432
     networks:
       - biohubbc-network
     volumes:
@@ -46,7 +46,7 @@ services:
       - DB_HOST=${DB_HOST}
       - DB_USER_API=${DB_USER_API}
       - DB_USER_API_PASS=${DB_USER_API_PASS}
-      - DB_PORT=${DB_PORT}
+      - DB_PORT=5432
       - DB_DATABASE=${DB_DATABASE}
       - DB_SCHEMA=${DB_SCHEMA}
       - KEYCLOAK_HOST=${KEYCLOAK_HOST}
