--- a/database/package.json
+++ b/database/package.json
@@ -36,8 +36,7 @@
     "eslint-config-prettier": "~6.15.0",
     "eslint-plugin-prettier": "~3.3.1",
     "npm-run-all": "~4.1.5",
-    "prettier": "~2.2.1",
-    "prettier-plugin-organize-imports": "~2.3.4",
+    "prettier": "^2.3.2",
     "ts-node": "~10.4.0"
   }
 }
