--- a/api/package.json
+++ b/api/package.json
@@ -90,7 +90,8 @@
     "nodemon": "~2.0.14",
     "npm-run-all": "~4.1.5",
     "nyc": "~15.1.0",
-    "prettier": "~2.2.1",
+    "prettier": "~2.3.2",
+    "prettier-plugin-organize-imports": "~2.3.4",
     "sinon": "~11.1.2",
     "sinon-chai": "~3.7.0",
     "ts-mocha": "~8.0.0",
