--- a/api/package.json
+++ b/api/package.json
@@ -50,6 +50,7 @@
     "openapi-response-validator": "~11.0.0",
     "pg": "~8.7.1",
     "qs": "~6.10.1",
+    "saxon-js": "^2.4.0",
     "sql-template-strings": "~2.2.2",
     "swagger-ui-express": "~4.3.0",
     "typescript": "~4.1.6",
