--- a/api/package.json
+++ b/api/package.json
@@ -38,6 +38,7 @@
     "db-migrate-pg": "~1.2.2",
     "express": "~4.17.1",
     "express-openapi": "~9.3.0",
+    "fast-xml-parser": "^4.0.8",
     "jsonpath": "~1.1.1",
     "jsonwebtoken": "~8.5.1",
     "jwks-rsa": "~2.0.5",
