--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -87,8 +87,8 @@ jobs:
       - name: Build Database Image
         working-directory: "./database/.pipeline/"
         run: |
-          npm install
-          # npm ci
+          # npm install
+          npm ci --only=production
           DEBUG=* npm run db:build -- --pr=$BUILD_ID
 
   # Build the Database Setup image
@@ -135,8 +135,8 @@ jobs:
       - name: Build Database Setup Image
         working-directory: "./database/.pipeline/"
         run: |
-          npm install
-          # npm ci
+          # npm install
+          npm ci --only=production
           DEBUG=* npm run db-setup:build -- --pr=$BUILD_ID
 
   # Build the API image
@@ -183,8 +183,8 @@ jobs:
       - name: Build API Image
         working-directory: "./api/.pipeline/"
         run: |
-          npm install
-          # npm ci
+          # npm install
+          npm ci --only=production
           DEBUG=* npm run build -- --pr=$BUILD_ID
 
   # Build the web frontend app image
@@ -231,8 +231,8 @@ jobs:
       - name: Build APP Image
         working-directory: "./app/.pipeline/"
         run: |
-          npm install
-          # npm ci
+          # npm install
+          npm ci --only=production
           DEBUG=* npm run build -- --pr=$BUILD_ID
 
   # Deploy Database image
@@ -280,7 +280,8 @@ jobs:
       - name: Deploy Database Image
         working-directory: "./database/.pipeline/"
         run: |
-          npm install
+          # npm install
+          npm ci --only=production
           DEBUG=* npm run db:deploy -- --pr=$BUILD_ID --env=dev
 
   # Deploy Database image
@@ -329,8 +330,8 @@ jobs:
       - name: Deploy Database Setup Image
         working-directory: "./database/.pipeline/"
         run: |
-          npm install
-          # npm ci
+          # npm install
+          npm ci --only=production
           DEBUG=* npm run db-setup:deploy -- --pr=$BUILD_ID --env=dev
 
   # Deploy API image
@@ -379,8 +380,8 @@ jobs:
       - name: Deploy API Image
         working-directory: "./api/.pipeline/"
         run: |
-          npm install
-          # npm ci
+          # npm install
+          npm ci --only=production
           DEBUG=* npm run deploy -- --pr=$BUILD_ID --env=dev
 
   # Deploy App image
@@ -428,6 +429,6 @@ jobs:
       - name: Deploy App Image
         working-directory: "./app/.pipeline"
         run: |
-          npm install
-          # npm ci
+          # npm install
+          npm ci --only=production
           DEBUG=* npm run deploy -- --pr=$BUILD_ID --env=dev
