Update git action triggers Checkout and cache repo Misc cleanup of pipeline code Tweak pipeline package.json

--- a/.github/workflows/backup/e2e-test.yaml
+++ b/.github/workflows/backup/e2e-test.yaml
@@ -1,3 +1,5 @@
+# Some extra/old git action jobs, stored here as a backup, should they need to be re-instantiated.
+
 name: e2e
 on: workflow_dispatch
 jobs:
