--- a/.github/workflows/backup/zap.yml
+++ b/.github/workflows/backup/zap.yml
@@ -1,3 +1,5 @@
+# Some extra/old git action jobs, stored here as a backup, should they need to be re-instantiated.
+
 name: zap
 on: workflow_dispatch
 
@@ -24,4 +26,4 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           docker_name: 'owasp/zap2docker-stable'
           target: 'https://dev-biohubbc.apps.silver.devops.gov.bc.ca/'
-          cmd_options: '-a'  
+          cmd_options: '-a'
