--- a/database/.pipeline/templates/db.setup.bc.yaml
+++ b/database/.pipeline/templates/db.setup.bc.yaml
@@ -15,10 +15,10 @@ parameters:
     displayName: Name Suffix
     description: A suffix appended to all objects
     required: true
-    value: "-dev"
+    value: '-dev'
   - name: VERSION
     required: true
-    value: "1.0"
+    value: '1.0'
   - name: SOURCE_CONTEXT_DIR
     required: true
     value: database
@@ -49,7 +49,7 @@ objects:
       annotations:
         description: Nodejs Base Image
       labels:
-        shared: "true"
+        shared: 'true'
     spec:
       lookupPolicy:
         local: false
@@ -65,19 +65,19 @@ objects:
   - kind: ImageStream
     apiVersion: v1
     metadata:
-      name: "${NAME}"
+      name: '${NAME}'
       creationTimestamp:
       annotations:
         description: Nodejs Runtime Image
       labels:
-        shared: "true"
+        shared: 'true'
     spec:
       lookupPolicy:
         local: false
   - apiVersion: v1
     kind: BuildConfig
     metadata:
-      name: "${NAME}${SUFFIX}"
+      name: '${NAME}${SUFFIX}'
       creationTimestamp:
       labels: {}
       annotations: {}
@@ -87,7 +87,7 @@ objects:
       output:
         to:
           kind: ImageStreamTag
-          name: "${NAME}:${VERSION}"
+          name: '${NAME}:${VERSION}'
       postCommit: {}
       resources:
         limits:
@@ -98,10 +98,10 @@ objects:
           memory: 512Mi
       runPolicy: SerialLatestOnly
       source:
-        contextDir: "${SOURCE_CONTEXT_DIR}"
+        contextDir: '${SOURCE_CONTEXT_DIR}'
         git:
-          uri: "${SOURCE_REPOSITORY_URL}"
-          ref: "${SOURCE_REPOSITORY_REF}"
+          uri: '${SOURCE_REPOSITORY_URL}'
+          ref: '${SOURCE_REPOSITORY_REF}'
         type: Git
       strategy:
         dockerStrategy:
