--- a/.github/workflows/cleanClosedPR.yml
+++ b/.github/workflows/cleanClosedPR.yml
@@ -1,10 +1,12 @@
 # Clean out the deployment artifacts when a PR is closed, without a merge.
 # This clean out gets rid of the PR artifacts in Dev and in Tools.
 name: Clean out Dev from closed PR Artifacts
+
 on:
   pull_request:
     branches: [dev]
     types: [closed]
+
 jobs:
   clean:
     name: Clean Deployment Artifacts for API and App in Dev and Tools environment
@@ -18,7 +20,7 @@ jobs:
       - name: Checkout Dev Branch - Contains the Pipeline Code
         uses: actions/checkout@v2
         with:
-          ref: 'dev'
+          ref: "dev"
 
       # Install Node - for `node` and `npm` commands
       - name: Setup Node.js
