--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -2,8 +2,7 @@ name: Formating Checks
 
 on:
   pull_request:
-    branches:
-      - dev
+    types: [opened, reopened, synchronize, ready_for_review]
 
 jobs:
   format:
