--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,8 +2,7 @@ name: Test Checks
 
 on:
   pull_request:
-    branches:
-      - dev
+    types: [opened, reopened, synchronize, ready_for_review]
 
 jobs:
   test:
