--- a/api/.pipeline/templates/api.dc.yaml
+++ b/api/.pipeline/templates/api.dc.yaml
@@ -101,21 +101,21 @@ parameters:
     required: true
     value: '1'
 objects:
-  - apiVersion: image.openshift.io/v1
-    kind: ImageStream
-    metadata:
-      annotations:
-        description: Nodejs Runtime Image
-      labels:
-        shared: 'true'
-      creationTimestamp: null
-      generation: 0
-      name: ${NAME}
-    spec:
-      lookupPolicy:
-        local: false
-    status:
-      dockerImageRepository: null
+  # - apiVersion: image.openshift.io/v1
+  #   kind: ImageStream
+  #   metadata:
+  #     annotations:
+  #       description: Nodejs Runtime Image
+  #     labels:
+  #       shared: 'true'
+  #     creationTimestamp: null
+  #     generation: 0
+  #     name: ${NAME}
+  #   spec:
+  #     lookupPolicy:
+  #       local: false
+  #   status:
+  #     dockerImageRepository: null
   - apiVersion: apps.openshift.io/v1
     kind: DeploymentConfig
     metadata:
