--- a/api/.pipeline/templates/api.is.yaml
+++ b/api/.pipeline/templates/api.is.yaml
@@ -1,21 +1,21 @@
-apiVersion: v1
-parameters:
-  - name: NAME
-    value: biohub-platform-api-setup
-objects:
-  - apiVersion: image.openshift.io/v1
-    kind: ImageStream
-    metadata:
-      annotations:
-        description: Application api base image
-      labels:
-        shared: 'true'
-      creationTimestamp: null
-      generation: 0
-      name: ${NAME}
-    spec:
-      lookupPolicy:
-        local: false
-    status:
-      dockerImageRepository: null
-kind: Template
+# apiVersion: v1
+# parameters:
+#   - name: NAME
+#     value: biohub-platform-api-setup
+# objects:
+#   - apiVersion: image.openshift.io/v1
+#     kind: ImageStream
+#     metadata:
+#       annotations:
+#         description: Application api base image
+#       labels:
+#         shared: 'true'
+#       creationTimestamp: null
+#       generation: 0
+#       name: ${NAME}
+#     spec:
+#       lookupPolicy:
+#         local: false
+#     status:
+#       dockerImageRepository: null
+# kind: Template
