--- a/app/openshift/app.bc.yaml
+++ b/app/openshift/app.bc.yaml
@@ -38,27 +38,27 @@ parameters:
     required: true
     value: 14-ubi8
 objects:
-  # - kind: ImageStream
-  #   apiVersion: v1
-  #   metadata:
-  #     name: ${SOURCE_IMAGE_NAME}
-  #     creationTimestamp: null
-  #     annotations:
-  #       description: Nodejs Base Image
-  #     labels:
-  #       shared: 'true'
-  #   spec:
-  #     lookupPolicy:
-  #       local: false
-  #     tags:
-  #       - name: ${SOURCE_IMAGE_TAG}
-  #         annotations: null
-  #         from:
-  #           kind: DockerImage
-  #           name: ${BASE_IMAGE_URL}
-  #         importPolicy: {}
-  #         referencePolicy:
-  #           type: Local
+  - kind: ImageStream
+    apiVersion: v1
+    metadata:
+      name: ${SOURCE_IMAGE_NAME}
+      creationTimestamp: null
+      annotations:
+        description: Nodejs Base Image
+      labels:
+        shared: 'true'
+    spec:
+      lookupPolicy:
+        local: false
+      tags:
+        - name: ${SOURCE_IMAGE_TAG}
+          annotations: null
+          from:
+            kind: DockerImage
+            name: ${BASE_IMAGE_URL}
+          importPolicy: {}
+          referencePolicy:
+            type: Local
   - kind: ImageStream
     apiVersion: v1
     metadata:
@@ -93,7 +93,7 @@ objects:
         requests:
           cpu: 100m
           memory: 512Mi
-      runPolicy: Serial
+      runPolicy: SerialLatestOnly
       source:
         contextDir: '${SOURCE_CONTEXT_DIR}'
         git:
