--- a/api/.pipeline/package.json
+++ b/api/.pipeline/package.json
@@ -28,7 +28,6 @@
     "lodash.isstring": "~4.0.1"
   },
   "devDependencies": {
-    "prettier": "~2.3.2",
-    "prettier-plugin-organize-imports": "~2.3.4"
+    "prettier": "~2.3.2"
   }
 }
