--- a/database/.pipeline/package.json
+++ b/database/.pipeline/package.json
@@ -32,7 +32,6 @@
     "lodash.isstring": "~4.0.1"
   },
   "devDependencies": {
-    "prettier": "~2.3.2",
-    "prettier-plugin-organize-imports": "~2.3.4"
+    "prettier": "~2.3.2"
   }
 }
