--- a/app/package.json
+++ b/app/package.json
@@ -40,6 +40,7 @@
     "@tmcw/togeojson": "~4.2.0",
     "@turf/bbox": "~6.3.0",
     "@turf/boolean-equal": "~6.3.0",
+    "@turf/intersect": "~6.3.0",
     "axios": "~0.21.4",
     "clsx": "~1.1.1",
     "express": "~4.17.1",
