--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,8 @@ services:
       - ${API_PORT}:${API_PORT}
     environment:
       - NODE_ENV=${NODE_ENV}
-      - ELASTICSEARCH_URL=${ELASTICSEARCH_URL}
+      - BACKBONE_ELASTICSEARCH_URL=${BACKBONE_ELASTICSEARCH_URL}
+      - SIMS_ELASTICSEARCH_URL=${SIMS_ELASTICSEARCH_URL}
       - TZ=${API_TZ}
       - API_HOST=${API_HOST}
       - API_PORT=${API_PORT}
